instructions.Instructions.scala.error
Compilation error:
Instructions:8: error: not found: value afterward
afterward()
^